# segmentmap

./: Cargo.toml  README.md
benches/: payload.rs  segmentmap.rs
src/: lib.rs
