[package]
name = "segmentmap"
version = "0.1.3"
edition = "2021"
description = "A collection that maintains insertion order"
readme = "README.md"
repository = "https://github.com/kilmanio/segmentmap"
license = "MIT"
keywords = ["collection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3.2.0"
array-macro = "2.1.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "payload"
harness = false
